--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,11 @@ jobs:
       - name: Create prebuilt directory
         run: mkdir -p prebuilt
       
+      - name: Initialize llama.cpp for Android
+        run: |
+          echo "Initializing llama.cpp for Android platform only..."
+          scripts/setupLlamaCpp.sh init --platform=android
+      
       - name: Build GPU Libraries
         run: |
           # Get Android NDK path
@@ -106,9 +111,9 @@ jobs:
           # First build the GPU backend libraries
           echo "Building Android GPU backend libraries..."
           if [ -n "$GLSLC_PATH" ]; then
-            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH" --glslc-path="$GLSLC_PATH"
+            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH" --glslc-path="$GLSLC_PATH" --platform=android
           else
-            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH"
+            scripts/build_android_gpu_backend.sh --abi=all --ndk-path="$NDK_PATH" --platform=android
           fi
           
           # Verify GPU libraries were built in prebuilt directory
@@ -135,7 +140,7 @@ jobs:
           
           # Now build the final Android libraries incorporating the GPU backends
           echo "Building Android libraries with OpenCL and Vulkan support..."
-          scripts/build_android_external.sh --abi=all --ndk-path="$NDK_PATH"
+          scripts/build_android_external.sh --abi=all --ndk-path="$NDK_PATH" --platform=android
           
           # Verify libraries were built successfully
           if [ ! -f "android/src/main/jniLibs/arm64-v8a/libllama.so" ]; then
